# eerik.dev

./: Cargo.toml  flake.nix  package-lock.json  package.json  tailwind.config.js
assets/css/: main.css
assets/markdown/: colorchords.md  homelab.md  nixos.md  portfolio.md
assets/markdown/notion_integration/: notion_integration.md
src/: main.rs
src/content/: blog.rs  mod.rs  project.rs  tech.rs
templates/: about.html  blog.html  blog_all_posts.html  blog_card.html  blog_post.html  featured_blogs.html  footer.html  head.html  header.html  hero.html  image_modal.html  index.html  input.css  pagination.html  project.html  projects.html
