[package]
name = "hello-world"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = "0.12.1"
askama_axum = "0.4.0"
axum = { version = "0.7.5", features = ["macros"]}
axum-template = "2.2.0"
handlebars = "5.1.2"
markdown = "1.0.0-alpha.17"
serde = { version = "1.0.197", features = ["derive"]}
tokio = { version = "1.37.0", features = ["full"]}
tower-http = { version = "0.5.1", features = ["fs", "trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
